Restauración de código original iText 2.1.7 (el actual modificado causaba problemas en el análisis de fuentes TTF y OTF)